--- a/app/src/main/res/layout/adapter_item_layout.xml
+++ b/app/src/main/res/layout/adapter_item_layout.xml
@@ -51,12 +51,13 @@
 
             <TextView
                 android:id="@+id/venue_name"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
-                android:gravity="center"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="Club Name"
                 android:textColor="@color/grey"
                 android:textSize="14sp" />
